--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,10 @@ default: &default
 
 development:
   <<: *default
-  database: myapp_development
+  host: 
+  database: hacker_news_development
+  username: postgres
+  password: <%= ENV['DEVELOPMENT_DATABASE_PASSWORD'] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -41,7 +44,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: myapp_test
+  host: 
+  database: hacker_news_test
+  username: postgres
+  password: <%= ENV['TEST_DATABASE_PASSWORD'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -65,6 +71,6 @@ test:
 #
 production:
   <<: *default
-  database: myapp_production
-  username: myapp
-  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+  database: hacker_news_production
+  username: postgres
+  password: <%= ENV['PRODUCTION_DATABASE_PASSWORD'] %>
