Update Github CI environment

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,7 @@ jobs:
         PGUSER: postgres
         PGPASSWORD: postgres
         RAILS_ENV: test
+        GRAPHQL_URL: https://iwa-test.herokuapp.com/graphql
       run: |
         bundle exec rake test
         # bundle exec rake test:system
